Minor fix for FFmpeg logo alignment

--- a/htdocs/css/simple-sidebar.css
+++ b/htdocs/css/simple-sidebar.css
@@ -56,6 +56,10 @@
   font-size: 18px;
 }
 
+.sidebar-nav > .sidebar-brand img {
+  vertical-align: text-top;
+}
+
 .sidebar-nav > .sidebar-brand a {
   color: #999999;
 }
